--- a/style.css
+++ b/style.css
@@ -15,6 +15,14 @@ body{
     /* border: 1px solid black; */
 }
 
+.newBtn{
+    /* grid-column-start: 1;
+    grid-column-end: 3; */
+    /* grid-row-start: 1;
+    grid-row-end: 9; */
+    /* width: 16em;    */
+}
+
 .dailyWeather{
     grid-column-start: 3;
     grid-column-end: 6;
